--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         text-align: right;
       }
 
+      .scoreboard .center {
+        text-align: center;
+        margin: 10px;
+      }
+
       .timeline {
         max-width: 900px;
         margin: 0 auto;
@@ -170,7 +175,7 @@
         .left,
         .right {
           text-align: left;
-          padding-left: 40px;
+          padding-left: 12px;
           padding-right: 12px;
         }
 
@@ -193,7 +198,7 @@
     <header>
       <div class="scoreboard">
         <div class="winner isabelle" id="score-isabelle">Isabelle: 0</div>
-        <div>A Thing We Are Doing</div>
+        <div class="center">A Thing We Are Doing</div>
         <div id="score-stefan" class="right winner stefan">Stefan: 0</div>
       </div>
     </header>
